[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynaplex"
version = "0.1.0"
description = "Python implementation of DynaPlex - Training Generally capable agents using Deep Reinforcement Learning in inventory control"
readme = "README.md"
authors = [
    {name = "DynaPlex Team"}
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.13.0",
    "gymnasium>=0.28.1",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "black>=22.0.0",
]

[tool.setuptools]
packages = ["dynaplex"] 